# ESP_91W

./: .gitignore  .gitmodules  CMakeLists.txt  common.cmake  partitions.csv  sdkconfig  sdkconfig.old
components/SSD1306/: CMakeLists.txt  SSD1306.c  SSD1306.h  SSD1306_reg.h
components/ble/: CMakeLists.txt  ble.c  ble.h  ble_adv.c  ble_adv.h  ble_ams.c  ble_cts.c  ble_cts.h  ble_def.h  ble_gatts_svc.c  ble_gatts_svc.h  ble_log.h  ble_svc_dis.c  ble_svc_dis.h
components/ble/gattc/: ble_cts.c  ble_disc.c  ble_disc.h
components/display/: CMakeLists.txt  display.c  display.h
components/linked_list/: linked_list.h
components/lvgl_font/: CMakeLists.txt  lvgl_font.h  seven_seg_14.c  seven_seg_14_number.c  seven_seg_16.c  seven_seg_18.c  seven_seg_20.c  seven_seg_22.c  seven_seg_24.c  seven_seg_26.c  seven_seg_2_16.c
components/user_interface/: CMakeLists.txt  ui.c  ui.h  ui_def.h  ui_helper.c  ui_helper.h  ui_timer.c  ui_timer.h
components/user_interface/nodes/: home_screen.c  home_screen.h
config/: SSD1306_conf.h  ble_config.h  lv_conf.h  thread_config.h
etc/: common.cmake  std_type.h
main/: CMakeLists.txt  esp_watch.c
